// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskItem /> Should render the task with no incidents without errors 1`] = `
<WithStyles(ExpansionPanel)>
  <WithStyles(ExpansionPanelSummary)
    expandIcon={<pure(ExpandMoreIcon) />}
    onClick={[Function]}
  >
    <WithStyles(Grid)
      className="card__grid"
      container={true}
    >
      <WithStyles(Grid)
        container={true}
        item={true}
        sm={true}
        xs={10}
      >
        <WithStyles(Grid)
          container={true}
          direction="column"
          item={true}
          xs={true}
        >
          <WithStyles(Grid)
            item={true}
            xs={true}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="subtitle1"
            >
              POI quest service
            </WithStyles(Typography)>
            <WithStyles(Typography)
              className="d-none d-lg-block"
              gutterBottom={true}
            >
              Do A POI quest service
            </WithStyles(Typography)>
            <WithStyles(Typography)
              color="textSecondary"
            >
              Created: 
              2019/05/03, 4:04:26 pm
            </WithStyles(Typography)>
            <WithStyles(Typography)
              color="textSecondary"
            >
              Updated: 
              2019/05/03, 4:02:46 pm
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        className="card__grid-center"
        item={true}
        xs={1}
      />
    </WithStyles(Grid)>
  </WithStyles(ExpansionPanelSummary)>
</WithStyles(ExpansionPanel)>
`;

exports[`<TaskItem /> Should render the task without errors 1`] = `
<WithStyles(ExpansionPanel)>
  <WithStyles(ExpansionPanelSummary)
    expandIcon={<pure(ExpandMoreIcon) />}
    onClick={[Function]}
  >
    <WithStyles(Grid)
      className="card__grid"
      container={true}
    >
      <WithStyles(Grid)
        container={true}
        item={true}
        sm={true}
        xs={10}
      >
        <WithStyles(Grid)
          container={true}
          direction="column"
          item={true}
          xs={true}
        >
          <WithStyles(Grid)
            item={true}
            xs={true}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="subtitle1"
            >
              POI quest service
            </WithStyles(Typography)>
            <WithStyles(Typography)
              className="d-none d-lg-block"
              gutterBottom={true}
            >
              Do A POI quest service
            </WithStyles(Typography)>
            <WithStyles(Typography)
              color="textSecondary"
            >
              Total Incidents: 
              1
            </WithStyles(Typography)>
            <WithStyles(Typography)
              color="textSecondary"
            >
              Created: 
              2019/05/03, 4:04:26 pm
            </WithStyles(Typography)>
            <WithStyles(Typography)
              color="textSecondary"
            >
              Updated: 
              2019/05/03, 4:02:46 pm
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        className="card__grid-center"
        item={true}
        xs={1}
      >
        <span
          className="badge badge-primary badge-pill cursor-pointer card__grid__pill"
        >
          1
        </span>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(ExpansionPanelSummary)>
</WithStyles(ExpansionPanel)>
`;
